--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -12,7 +12,7 @@ params:
   breadcrumb:
     position: hero-start
   search:
-    active: true
+    active: false
     positions:
       - footer
   i18n:
