removed partial event (thx to new param) and added search icon to header

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -21,6 +21,7 @@ params:
     active: true
     positions:
       - footer
+      - primary
   i18n:
     positions:
       - primary
@@ -37,6 +38,8 @@ params:
     single:
       calendar_links: true
       meta_in_sidebar: true
+      navigation: 
+        active: false
   persons:
     index:
       layout: grid
