--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -29,6 +29,9 @@ params:
       # - footer
   summary:
     position: content
+  home:
+    head:
+      title: site
   events:
     index:
       options:
