config and large event

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -33,7 +33,9 @@ params:
     head:
       title: site
   events:
-    date_format: "02 January 2006"
+    list:
+      time_slots:
+        date_format: "02 January 2006"
     index:
       options:
         categories: true
